Imagem grid - responsiva

--- a/galeria-imagens/style.css
+++ b/galeria-imagens/style.css
@@ -41,13 +41,13 @@
 }
 .h-2 {
 
-    grid-row: span 1; 
+    grid-row: span 2; 
  }
  .w-1 {
      grid-column: span 1;
  }
  .w-2 {
-    grid-column: span 1;
+    grid-column: span 2;
 }
 @media(max-width:768px) {
     .container-galeria {
@@ -55,4 +55,10 @@
     grid-auto-rows: 50vh;
 
     }
+    .h-2 {
+
+        grid-row: span 1; 
+     }
+     .w-2 {
+         grid-column: span 1;   }
 }
